# rxnet

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  idf_component.yml  module.yml
.github/workflows/: ci.yml
c/: CMakeLists.txt  Makefile  README.md
c/cmake/: rxnetConfig.cmake.in
c/examples/: example.c  pn_example.c  sched_report.h
c/examples/fsm/00-light/: CMakeLists.txt  README.md  app_driver.c  app_driver.h  light_fsm.c  light_fsm.h  main.c  main_cli.c
c/examples/fsm/01-auto/: README.md  cli_fsm.c  main.c  main_cli.c
c/examples/fsm/01-light/: README.md  app_driver.c  app_driver.h  cli_fsm.c  light_fsm.c  light_fsm.h  light_fsm_model.h  main.c  main_cli.c
c/examples/fsm/02-auto/: CMakeLists.txt  README.md  auto_fsm.c  auto_fsm.h  auto_fsm_model.h  cli_fsm.h  main.c  main_cli.c
c/examples/fsm/02-blink/: CMakeLists.txt  cli_fsm.h  main.c  main_cli.c
c/examples/fsm/03-blink/: README.md  blink_fsm.c  blink_fsm.h  blink_fsm_model.h  main.c  main_cli.c
c/examples/fsm/03-mix/: README.md  blink_fsm.h  light_fsm.c  main.c  main_cli.c
c/examples/fsm/04-mix/: CMakeLists.txt  README.md  app_driver.c  app_driver.h  auto_fsm.c  auto_fsm.h  blink_fsm.c  light_fsm.c  light_fsm.h  main.c  main_cli.c  main_coop.c  main_coop_trace.c  main_cyclic.c  main_cyclic_trace.c  main_threads.c  main_threads_trace.c  main_trace.c
c/examples/mixed/: main_cli.c
c/examples/pn/00-light/: light_pn.h  main_cli.c
c/examples/pn/01-auto/: auto_pn.h  main_cli.c
c/examples/pn/01-light/: light_pn.c  light_pn.h  main_cli.c
c/examples/pn/02-auto/: auto_pn.c  auto_pn.h  main_cli.c
c/examples/pn/02-blink/: main_cli.c
c/examples/pn/03-blink/: blink_pn.c  blink_pn.h  main_cli.c
c/examples/pn/03-mix/: README.md  main_cli.c  main_threads.c
c/examples/pn/04-mix/: README.md  main_cli.c  main_coop.c  main_coop_trace.c  main_cyclic.c  main_cyclic_trace.c  main_threads.c  main_threads_trace.c  main_trace.c
c/include/: rxnet.h
c/include/rxnet/: config.h  coop.h  cyclic.h  fsm.h  pn.h  port.h  runtime.h  thread.h  trace.h
c/include/rxnet/port/: freertos.h  posix.h  zephyr.h
c/src/: coop.c  cyclic.c  fsm.c  pn.c  runtime.c  rxnet.c  thread.c  trace.c
c/src/port/: zephyr.c
c/tests/: parity_runner.c  rxtest.h  test_fsm.c  test_pn.c  test_runtime.c  test_trace.c
docs/: Makefile  cmake-integration.md  guia-alumnos.md  specs-c.md  specs-python.md  specs.md  user-c.md  user-intro.md  user-python.md  user.md
docs/specs/: design.md  requirements.md  tasks.md
docs/specs/c/: design.md  requirements.md  tasks.md  tracing.md
docs/specs/python/: design.md  requirements.md  tasks.md  tracing.md
python/: README.md  example.py  pn_example.py  pyproject.toml
python/examples/: app_driver.py  cli.py  sched_report.py
python/examples/fsm/00-basic/: main.py  model.py  system.py
python/examples/fsm/01-light/: light.yaml  light_fsm.py  light_fsm_model.py  main.py
python/examples/fsm/02-auto/: auto.yaml  auto_fsm.py  auto_fsm_model.py  main.py
python/examples/fsm/03-blink/: blink.yaml  blink_fsm.py  blink_fsm_model.py  main.py
python/examples/fsm/04-mix/: README.md  main.py  main_async.py  main_coop.py  main_coop_trace.py  main_threads.py  main_threads_trace.py  main_trace.py
python/examples/pn/00-basic/: main.py  model.py  system.py
python/examples/pn/01-light/: light_pn.py  main.py
python/examples/pn/02-auto/: auto_pn.py  main.py
python/examples/pn/03-blink/: blink_pn.py  main.py
python/examples/pn/04-mix/: README.md  main.py  main_async.py  main_coop.py  main_coop_trace.py  main_threads.py  main_threads_trace.py  main_trace.py
python/rxnet/: __init__.py  coop.py  core.py  cyclic.py  diagram.py  fsm.py  pn.py  runtime.py  thread.py  trace.py  worker_pool.py
python/rxnet/tools/: gen.py  trace.py
python/tests/: __init__.py  parity_runner.py  test_fsm.py  test_multirate.py  test_pn.py  test_runtime.py  test_trace.py  test_worker_pool.py
tests/parity/: run_parity.sh
tlaplus/: auto_fsm.tla  blink_fsm.tla  light_fsm.tla
zephyr/: CMakeLists.txt
