[project]
name = "rxnet"
version = "1.0.0"
description = "Reactive synchronous runtime — Python implementation"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "types-pyyaml[dev]>=6.0.12.20260408",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
